# ledger-iota-rs

./: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  manifest.scm
.github/workflows/: ci.yml  publish.yml
examples/: address.rs  pubkeys.rs  send_iota.rs  sign.rs  sign_message.rs  verify.rs  version.rs
src/: apdu.rs  api.rs  error.rs  lib.rs  objects.rs  tx.rs  types.rs
src/commands/: get_pubkey.rs  get_version.rs  mod.rs  quit.rs  sign_tx.rs  verify_address.rs
src/protocol/: chunks.rs  mod.rs
src/transport/: hid.rs  mod.rs  tcp.rs
tests/: speculos.rs
tests/elf/: NOTICE  app-iota-nanosp.elf
